--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,12 @@ name: CI
 
 on:
   pull_request:
+    branches:
+      - main
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - feature/**
 
 jobs:
   scan_ruby:
@@ -16,7 +20,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: .ruby-version
+          ruby-version: 3.1.2
           bundler-cache: true
 
       - name: Scan for common Rails security vulnerabilities using static analysis
