--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,7 @@ name: CI
 
 on:
   pull_request:
-    branches:
-      - main
   push:
-    branches:
-      - main
-      - feature/**
 
 jobs:
   scan_ruby:
@@ -22,6 +17,9 @@ jobs:
         with:
           ruby-version: 3.1.2
           bundler-cache: true
+
+      - name: Install dependencies
+        run: bin/bundle install --jobs 4 --retry 3
 
       - name: Scan for common Rails security vulnerabilities using static analysis
         run: bin/brakeman --no-pager
