--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.1.2
+          ruby-version: .ruby-version
           rubygems: latest
           bundler-cache: true
 
@@ -36,6 +36,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: .ruby-version
+          rubygems: latest
           bundler-cache: true
 
       - name: Scan for security vulnerabilities in JavaScript dependencies
@@ -51,6 +52,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: .ruby-version
+          rubygems: latest
           bundler-cache: true
 
       - name: Lint code for consistent style
@@ -76,6 +78,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: .ruby-version
+          rubygems: latest
           bundler-cache: true
 
       - name: Run tests
