--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
           # REDIS_URL: redis://localhost:6379/0
         run: |
           bin/rails db:test:prepare
-          bin/rspec
+          rspec
 
       - name: Keep screenshots from failed system tests
         uses: actions/upload-artifact@v4
